# speaking-melona-ai

./: generate_story.py  main.py  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 69d7325b0e7f_update_character_model_to_use_.py  af809ff3602e_add_image.py  b8bfa7a23e9c_change_barcode_to_barcodes.py
sql_app/: database.py  models.py  schemas.py
src/: X_bot.py  crud.py  database.py  generate_story.py  main.py  models.py  schemas.py  server.py  utils.py
